@startuml pakiet_gui_z_wraplayout
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho

' Odstępy i wyrównanie
skinparam nodesep 50
skinparam ranksep 60
skinparam defaultTextAlignment left

' Stylizacja inżynierska
skinparam class {
    BackgroundColor #F8F9FA
    BorderColor #343A40
    ArrowColor #343A40
    FontSize 13
    HeaderBackgroundColor #E3F2FD
}

skinparam package {
    BackgroundColor #FFFFFF
    BorderColor #343A40
    TitleFontColor #000000
    TitleFontStyle bold
}

' Zewnętrzna zależność dla kontekstu inżynierskiego
class "java.awt.FlowLayout" as FlowLayout <<native>> {
}

package "Pakiet btg.gui (Warstwa Prezentacji)" {

    class "WrapLayout" as WrapLayout {
        + preferredLayoutSize(target: Container) : Dimension
        + minimumLayoutSize(target: Container) : Dimension
        - calculateLayoutSize() : Dimension
        --
        ~ Autorski menedżer układu
        ~ Dynamiczne zawijanie komponentów
    }

    class "UIConstants" as UIConstants <<utility>> {
        + {static} createButton(text: String) : JButton
        + {static} styleTable(table: JTable) : void
        --
        ~ Scentralizowane repozytorium stylów
    }

    class "MainWindow" as MainWindow <<JFrame>> {
        - fileListPanel : FileListPanel
        --
        + Główny kontroler widoku
        + Inicjalizuje serwisy w tle
        ~ Aktualizuje teksty (i18n)
    }

    class "FileListPanel" as FileListPanel <<JPanel>> {
        - table : JTable
        --
        + Renderuje statusy plików
        + Obsługuje zaznaczanie
    }

    class "DuplicateViewerWindow" as DupWin <<JDialog>> {
        --
        + Prezentuje zgrupowane pary plików
        + Umożliwia weryfikację i usuwanie
    }

    class "ImagePreviewTooltip" as ImagePreview <<JWindow>> {
        - imageCache : ConcurrentHashMap
        --
        + Generuje dynamiczny podgląd grafiki
        + Zabezpiecza wątek (cache)
    }
}

' Relacje dziedziczenia
FlowLayout <|-- WrapLayout : " extends"

' Relacje kompozycji i użycia
MainWindow *-- FileListPanel : " Zawiera\n(Centrum)"
MainWindow -right.> DupWin : " Otwiera\nokno modalne"
FileListPanel -down.> ImagePreview : " Wyzwala podgląd\n(MouseHover)"

' Relacja użycia WrapLayout
MainWindow .up.> WrapLayout : " Używa do\nsekcji Północ"

' Relacje do UIConstants
UIConstants <.. MainWindow : " Metody\nwytwórcze"
UIConstants <.. FileListPanel

' Ukryte linie do poprawy układu
WrapLayout -[hidden]right- UIConstants

@enduml